--- a/styles/home.css
+++ b/styles/home.css
@@ -8,7 +8,7 @@
 .home {
     position: relative;
     background-position: center;
-    height: 600px;
+    height: 570px;
     width: 100%;
     color: white;
     justify-content: center;
@@ -57,16 +57,19 @@
 }
 .container-header {
     width: 100%;
-    max-width: 1400px;
+    max-width: 100vw;
+    overflow: hidden;
     margin: 0 auto;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 50px; 
+    padding: 15px 5%; 
     color: white;
     position: absolute;
     top: 0;
     left: 0;
+    box-sizing: border-box;
 }
 
 .logo {
@@ -189,15 +192,57 @@
     margin-top: 40px;
 }
 
-.stats div {
-    text-align: center;
-}
+
 
 .stats span {
-    font-size: 24px;
-    font-weight: bold;
+    font-size: 20px;
+    font-weight: 500;
 }
 
 .stats p {
     font-size: 16px;
+}
+
+.stats img {
+    width: 60px;
+    height: 60px;
+    margin-bottom: 10px;
+}
+
+.stat {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.stat-count {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    justify-content: center;
+}
+
+/* Empresas */
+
+.companies {
+    width: 100%;
+    height: 120px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: center;
+    background-color: black;
+    gap: 0 20px;
+}
+
+.company-logos {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 10px;
+    gap: 20px;
+    width: 100%; 
+    height: 40px;
+    
 }
