--- a/styles/home.css
+++ b/styles/home.css
@@ -170,8 +170,12 @@
     cursor: pointer;
     display: flex;
     align-items: center;
-    gap: 5px; /* Espaciado entre el ícono y el texto */
+    gap: 10px; /* Espaciado entre el ícono y el texto */
     height: 100%;
+}
+
+.search-btn .fa-search {
+    font-size: 13px; /* Ajusta el tamaño del ícono aquí */
 }
 
 .search-bar button:hover {
@@ -246,3 +250,145 @@
     height: 40px;
     
 }
+
+/* Trabajos Recientes */
+
+.recent-jobs {
+    padding: 40px;
+    background-color: #fff;
+}
+
+.container-jobs {
+    margin: 10px 40px;;
+    padding: 30px;
+    gap: 50px
+    
+}
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 30px;
+    margin-bottom: 50px;
+}
+
+.header p{
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.container-jobs h2 {
+    font-size: 50px;
+}
+
+.view-all {
+    font-size: 25px;
+    color: #019870;
+    text-decoration: underline;
+}
+
+.job-list {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.job-card {
+    padding: 30px;
+    border-radius: 20px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    position: relative;
+}
+
+.job-card h3 {
+    font-size: 38px;
+    font-weight: 500;
+    margin: 0;
+    margin-bottom: 5px;
+}
+
+.job-card p, span {
+    font-size: 20px;
+
+}
+
+.job-header {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 20px;
+}
+
+.job-meta {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.job-details {
+    display: flex;
+    flex-direction: column;
+}
+
+.save-icon {
+    font-size: 20px;
+    color: #666;
+    cursor: pointer;
+}
+
+.save-icon:hover {
+    color: #2a8975;
+}
+
+.time-label {
+    font-size: 15px;
+    color: #008080;
+    background: #e0f7fa;
+    padding: 4px 8px;
+    border-radius: 5px;
+    align-self: flex-start;
+}
+
+.job-info {
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+    font-size: 14px;
+    color: #666;
+    align-items: center;
+    justify-content: space-between;
+}
+
+
+
+.icons {
+    color: #2a8975; 
+}
+
+
+.job-btn {
+    margin-left: auto;
+    padding: 10px 10px;
+    background: #008080;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.job-btn:hover {
+    background: #006666;
+}
+
+.company-job-logo{
+    width: 40px;
+    height: 40px;
+    margin-right: 10px;
+    vertical-align: middle;
+}
+
