--- a/styles/home.css
+++ b/styles/home.css
@@ -140,12 +140,12 @@
     display: flex;
     align-items: center;
     background: white;
-    border-radius: 15px; /* Bordes redondeados */
+    border-radius: 15px; 
     padding: 0px;
-    width: 800px; /* Ajusta según tu diseño */
+    width: 800px; 
     height: 70px;
     gap: 10px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); /* Sombra sutil */
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); 
 }
 
 .search-bar input,
@@ -392,3 +392,190 @@
     vertical-align: middle;
 }
 
+/* Sección Categorias */
+
+.categories {
+    text-align: center;
+    padding: 60px 20px;
+    background-color: #eaf4f2;
+}
+
+.categories-header h2 {
+    font-size: 50px;
+
+}
+
+.categories-header p {
+    color: #666;
+    padding: 40px;
+    margin-bottom: 10px;
+}
+
+.categories-grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.category-card {
+    background: white;
+    padding: 20px;
+    gap: 20px;
+    border-radius: 20px;
+    box-shadow: 0 4px 6px rgba(95, 95, 95, 0.1);
+    text-align: center;
+    transition: transform 0.3s ease;
+    
+}
+
+.category-card:hover {
+    transform: translateY(-5px);
+}
+
+.categories-icon {
+    font-size: 40px;
+    color: #2a8975;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.category-card h3 {
+    font-size: 1.2rem;
+    margin-bottom: 5px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.jobs-count {
+    display: inline-block;
+    background: #eaf4f2;
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-weight: normal;
+    color: #027373;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+/* Bloque info */
+.info-section {
+    padding: 60px 20px;
+}
+
+.info-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.info-image {
+    width: 100%;
+    height: 400px;
+    background: url('../img/group-modern-architects.jpg')  no-repeat center/cover;
+    background-size: cover;
+    border-radius: 15px;
+    position: relative;
+}
+
+.info-text  {
+    margin-left: 20px;
+    
+}
+
+.info-text p {
+    padding-top: 20px;
+    text-align: left;
+}
+
+.info-text h2 {
+    font-size: 40px;
+    margin-bottom: 20px;
+    
+}
+
+.info-buttons {
+   margin-top: 50px;
+}
+
+.btn-info {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.primary {
+    background: #027373;
+    color: white;
+}
+
+.secondary {
+    background: transparent;
+    color: #027373;
+    font-weight: 500;
+    text-decoration: underline;
+    margin-left: 10px;
+}
+
+.info-stats {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    padding: 40px 20px;
+    margin: 40px auto;
+    text-align: left;
+    max-width: 1200px;
+}
+
+.subtitle{
+    font-size: 25px;
+    font-weight: 500;
+}
+
+.stat-info {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+
+}
+
+.stat-info h3 {
+    color: #027373;
+    font-size: 40px;
+
+}
+
+/* Bloque Banner */
+
+.cta-banner {
+    background: url('../img/freepik__people-bussiness-group-black-background__28481.png')  no-repeat center/cover;
+    background-size: cover;
+    color: white;
+    padding: 40px;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    max-width: 1200px;
+    height: 200px;
+    margin: 0 auto;
+}
+
+.cta-text  {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
+}
+
+.cta-banner h2 {
+    font-size: 3rem;
+    font-weight: bold;
+}
