--- a/styles/home.css
+++ b/styles/home.css
@@ -1,8 +1,8 @@
-*{ 
+* {
     margin: 0;
     padding: 0;
     font-family: 'Work Sans', 'Roboto', 'Ubuntu', sans-serif;
-    
+
 }
 
 .home {
@@ -28,33 +28,35 @@
     left: 0;
     width: 110%;
     height: 110%;
-    background: url('../img/banner.png')  no-repeat center/cover;
+    background: url('../img/banner.png') no-repeat center/cover;
     background-size: cover;
-    filter: blur(30px) brightness(0.3); /* Difuminado y oscurecido */
+    filter: blur(30px) brightness(0.3);
+    /* Difuminado y oscurecido */
     transform: scale(1.1);
     z-index: -1;
 }
 
-.hero{
-    
+.hero {
+
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 10px;
-    
+
 }
 
-.hero h1{
+.hero h1 {
     font-size: 60px;
     font-weight: 700;
 }
 
-.hero p{
+.hero p {
     font-size: 18px;
     font-weight: 300;
     padding-bottom: 20px;
 }
+
 .container-header {
     width: 100%;
     max-width: 100vw;
@@ -64,7 +66,7 @@
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    padding: 15px 5%; 
+    padding: 15px 5%;
     color: white;
     position: absolute;
     top: 0;
@@ -101,7 +103,8 @@
 }
 
 .nav-links a:hover {
-    color: #00b894; /* Verde agua, ajusta si es necesario */
+    color: #00b894;
+    /* Verde agua, ajusta si es necesario */
 }
 
 /* Botones de Login y Register */
@@ -127,12 +130,14 @@
 }
 
 .btn-register {
-    background-color: #00b894; /* Verde agua */
+    background-color: #00b894;
+    /* Verde agua */
     border: none;
 }
 
 .btn-register:hover {
-    background-color: #019870; /* Verde más oscuro */
+    background-color: #019870;
+    /* Verde más oscuro */
 }
 
 /* Barra de búsqueda */
@@ -140,12 +145,12 @@
     display: flex;
     align-items: center;
     background: white;
-    border-radius: 15px; 
+    border-radius: 15px;
     padding: 0px;
-    width: 800px; 
+    width: 800px;
     height: 70px;
     gap: 10px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); 
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 }
 
 .search-bar input,
@@ -155,27 +160,32 @@
     outline: none;
     background: none;
     padding: 10px;
-    flex: 1; /* Hace que los elementos ocupen el mismo espacio */
+    flex: 1;
+    /* Hace que los elementos ocupen el mismo espacio */
     font-size: 16px;
     appearance: none;
 }
 
 .search-btn {
-    background: #2a8975; /* Color del botón */
+    background: #2a8975;
+    /* Color del botón */
     color: white;
     border: none;
     padding: 12px 20px;
-    border-radius: 0 15px 15px 0; /* Bordes redondeados en el botón */
+    border-radius: 0 15px 15px 0;
+    /* Bordes redondeados en el botón */
     font-size: 16px;
     cursor: pointer;
     display: flex;
     align-items: center;
-    gap: 10px; /* Espaciado entre el ícono y el texto */
+    gap: 10px;
+    /* Espaciado entre el ícono y el texto */
     height: 100%;
 }
 
 .search-btn .fa-search {
-    font-size: 13px; /* Ajusta el tamaño del ícono aquí */
+    font-size: 13px;
+    /* Ajusta el tamaño del ícono aquí */
 }
 
 .search-bar button:hover {
@@ -185,7 +195,8 @@
 .divider {
     width: 1px;
     height: 25px;
-    background: #ccc; /* Línea divisoria */
+    background: #ccc;
+    /* Línea divisoria */
 }
 
 /* Estadísticas */
@@ -246,9 +257,9 @@
     justify-content: space-evenly;
     padding: 10px;
     gap: 20px;
-    width: 100%; 
+    width: 100%;
     height: 40px;
-    
+
 }
 
 /* Trabajos Recientes */
@@ -259,10 +270,10 @@
 }
 
 .container-jobs {
-    margin: 10px 40px;;
+    margin: 10px 40px;
+    ;
     padding: 30px;
     gap: 50px
-    
 }
 
 .header {
@@ -273,7 +284,7 @@
     margin-bottom: 50px;
 }
 
-.header p{
+.header p {
     font-size: 20px;
     font-weight: 500;
 }
@@ -311,7 +322,8 @@
     margin-bottom: 5px;
 }
 
-.job-card p, span {
+.job-card p,
+span {
     font-size: 20px;
 
 }
@@ -367,7 +379,7 @@
 
 
 .icons {
-    color: #2a8975; 
+    color: #2a8975;
 }
 
 
@@ -385,7 +397,7 @@
     background: #006666;
 }
 
-.company-job-logo{
+.company-job-logo {
     width: 40px;
     height: 40px;
     margin-right: 10px;
@@ -427,7 +439,7 @@
     box-shadow: 0 4px 6px rgba(95, 95, 95, 0.1);
     text-align: center;
     transition: transform 0.3s ease;
-    
+
 }
 
 .category-card:hover {
@@ -476,15 +488,15 @@
 .info-image {
     width: 100%;
     height: 400px;
-    background: url('../img/group-modern-architects.jpg')  no-repeat center/cover;
+    background: url('../img/group-modern-architects.jpg') no-repeat center/cover;
     background-size: cover;
     border-radius: 15px;
     position: relative;
 }
 
-.info-text  {
+.info-text {
     margin-left: 20px;
-    
+
 }
 
 .info-text p {
@@ -495,11 +507,11 @@
 .info-text h2 {
     font-size: 40px;
     margin-bottom: 20px;
-    
+
 }
 
 .info-buttons {
-   margin-top: 50px;
+    margin-top: 50px;
 }
 
 .btn-info {
@@ -533,7 +545,7 @@
     max-width: 1200px;
 }
 
-.subtitle{
+.subtitle {
     font-size: 25px;
     font-weight: 500;
 }
@@ -554,7 +566,7 @@
 /* Bloque Banner */
 
 .cta-banner {
-    background: url('../img/freepik__people-bussiness-group-black-background__28481.png')  no-repeat center/cover;
+    background: url('../img/freepik__people-bussiness-group-black-background__28481.png') no-repeat center/cover;
     background-size: cover;
     color: white;
     padding: 40px;
@@ -568,7 +580,7 @@
     margin: 0 auto;
 }
 
-.cta-text  {
+.cta-text {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -578,4 +590,99 @@
 .cta-banner h2 {
     font-size: 3rem;
     font-weight: bold;
+}
+
+/* Secccón Testimonios */
+
+.testimonials {
+    background-color: #eaf4f2;
+    padding: 60px 20px;
+    text-align: center;
+}
+
+
+.container-testimonials {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.title-testimonial {
+    font-size: 50px;
+    margin-bottom: 10px;
+}
+
+
+.subtitle-testimonials {
+    font-size: 16px;
+    max-width: 600px;
+    margin: 0 auto 40px;
+}
+
+.testimonials-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 20px;
+}
+
+
+.testimonial-card {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    background: #fff;
+    padding: 40px;
+    border-radius: 12px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    text-align: left;
+    justify-content: space-around;
+}
+
+.stars {
+    display: flex;
+    gap: 5px;
+    color: #f8b400;
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
+
+.testimonial-title {
+    font-size: 22px;
+    font-weight: 600;
+    color: #111;
+    margin-bottom: 10px;
+}
+
+
+.testimonial-text {
+    font-size: 17px;
+    font-style: italic;
+    color: #555;
+    margin: 10px 0;
+    margin-bottom: 20px;
+}
+
+
+.testimonial-footer {
+    display: flex;
+    align-items: center;
+    margin-top: 15px;
+}
+
+/* Imagen del cliente */
+.avatar {
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
+.name {
+    font-weight: bold;
+    color: #222;
+}
+
+.role {
+    font-size: 14px;
+    color: #888;
 }
