--- a/styles/home/header.css
+++ b/styles/home/header.css
@@ -95,7 +95,7 @@
 
 .nav-links a:hover {
     color: #00b894;
-   
+
 }
 
 
@@ -144,17 +144,20 @@
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 }
 
+
 .search-bar input,
 .search-bar select {
     margin: 10px;
-    border: none;
+    border: 0;
     outline: none;
+    border-color: #ffffff22;
     background: none;
     padding: 10px;
     flex: 1;
-    /* Hace que los elementos ocupen el mismo espacio */
     font-size: 16px;
     appearance: none;
+    -webkit-appearance: none; 
+    -moz-appearance: none;
 }
 
 .search-btn {
@@ -188,6 +191,10 @@
     height: 25px;
     background: #ccc;
     /* Línea divisoria */
+}
+
+.last{
+    display: none;
 }
 
 /* Estadísticas */
@@ -251,4 +258,73 @@
     width: 100%;
     height: 40px;
 
+}
+
+@media (max-width: 480px) {
+    .nav-links {
+        display: none;
+    }
+
+    .home {
+        height: 800px;
+        width: 100%;
+    }
+
+    .logo {
+        font-size: 2opx;
+    }
+
+    .auth-buttons {
+        font-size: 16px;
+    }
+
+    .hero {
+        padding: 10px;
+    }
+
+
+    .hero h1 {
+        font-size: 40px;
+        font-weight: 700;
+    }
+
+    .search-bar {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 15px;
+        margin-top: 10px;
+        width: 80%;
+        height: auto;
+    }
+
+    .divider{
+        width: 100%;
+        height: 1px;
+    }
+
+    .last{
+        display: flex;
+        margin-bottom: 20px;
+    }
+
+
+    .search-bar input,
+    .search-bar select {
+        width: 100%;
+        text-align: left;
+        margin: 0;
+        padding-top: 20px;
+        padding-bottom: 0px;
+
+    }
+
+    .search-btn {
+        border-radius: 10px;
+        width: 100%;
+        height: auto;
+        justify-content: center;
+        margin-bottom: 20px;
+
+    }
 }
