--- a/styles/Jobs/main-filters.css
+++ b/styles/Jobs/main-filters.css
@@ -154,7 +154,7 @@
 
 /* El “pill” con el número (count) */
 .filters__count {
-    background-color: #ad9186;
+    background-color: #fbf7f5;
     color: #333;
     font-size: 0.85rem;
     border-radius: 9999px;   /* Forma de píldora */
