--- a/styles/Jobs/header.css
+++ b/styles/Jobs/header.css
@@ -1,3 +1,10 @@
+* {
+    margin: 0;
+    padding: 0;
+    font-family: 'Work Sans', 'Roboto', 'Ubuntu', sans-serif;
+
+}
+
 .header {
     position: relative;
     background-position: center;
