--- a/styles/home/header.css
+++ b/styles/home/header.css
@@ -284,8 +284,14 @@
 
 
     .hero h1 {
-        font-size: 40px;
-        font-weight: 700;
+        font-size: 35px;
+        font-weight: 650;
+        padding: 20px;
+    }
+
+    .hero p {
+        font-size: 16px;
+        padding: 10px 20px;
     }
 
     .search-bar {
@@ -326,5 +332,48 @@
         justify-content: center;
         margin-bottom: 20px;
 
+    }
+
+    .stats{
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
+        width: 100%;
+        margin: 40px 10px 10px ;
+        justify-content: center;
+        align-items: center;
+        box-sizing: border-box;
+    }
+
+    .stat{
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        width: calc(50%-20px);
+        margin: 10px;
+    }
+
+    .stats span{
+        font-size: 16px;
+    }
+    .stats p{
+        font-size: 13px;
+    }
+
+    .stat img{
+        width: 45px;
+        height: 45px;
+    }
+
+    .stat-count p{
+        padding-left: 0;
+    }
+
+    .companies{
+        overflow: scroll;
+    }
+
+    .company-logos{
+        gap: 30px;
     }
 }
