--- a/styles/about/base.css
+++ b/styles/about/base.css
@@ -2,5 +2,8 @@
     margin: 0;
     padding: 0;
     font-family: 'Work Sans', 'Roboto', 'Ubuntu', sans-serif;
+}
 
+html,body{
+    overflow-x: hidden
 }
