--- a/styles/home/header.css
+++ b/styles/home/header.css
@@ -114,6 +114,26 @@
     color: white;
     border: 0px;
     transition: background 0.3s;
+    cursor: pointer;
+}
+
+#toggle {
+    display: none;
+}
+
+#dark-mode-btn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 20px;
+    font-size: 26px;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+}
+
+#dark-mode-btn.active {
+    color: #ffd700; /* Amarillo dorado */
+    transform: rotate(360deg);
 }
 
 .btn:hover {
@@ -275,7 +295,11 @@
     }
 
     .auth-buttons {
-        font-size: 16px;
+        font-size: 14px;
+    }
+
+    #dark-mode-btn{
+        margin-left: 5px;
     }
 
     .hero {
@@ -376,4 +400,22 @@
     .company-logos{
         gap: 30px;
     }
+}
+
+@media (max-width: 960px) {
+    .hero h1 {
+        font-size: 40px;
+    }
+    .nav-links{
+        font-size: 14px;
+    }
+
+    .auth-buttons{
+        font-size: 14px;
+    }
+
+    #dark-mode-btn{
+        margin-left: 5px;
+    }
+    
 }
