--- a/styles/Jobs/jobs__header.css
+++ b/styles/Jobs/jobs__header.css
@@ -29,7 +29,7 @@
     background-color: #000;
     filter: blur(30px) brightness(0.3);
     /* Difuminado y oscurecido */
-    transform: scale(1.1);
+    transform: scale(2);
     z-index: -1;
 }
 
@@ -141,4 +141,61 @@
 .btn-register:hover {
     background-color: #019870;
     /* Verde más oscuro */
+}
+
+@media (max-width: 480px) {
+    .header {
+        min-height: 40vh;
+    }
+
+    .header_nav-list {
+        display: none;
+    }
+
+    .home {
+        height: 800px;
+        width: 100%;
+    }
+
+    .header__logo {
+        font-size: 20px;
+    }
+
+    .auth-buttons {
+        font-size: 14px;
+    }
+
+    #dark-mode-btn{
+        margin-left: 5px;
+    }
+
+    .home__hero {
+        padding: 10px;
+    }
+
+
+    .home__hero h1 {
+        font-size: 35px;
+        font-weight: 650;
+        padding: 20px;
+    }
+
+}
+
+@media (max-width: 960px) {
+    .home_hero h1 {
+        font-size: 40px;
+    }
+    .header_nav-list{
+        font-size: 14px;
+    }
+
+    .auth-buttons{
+        font-size: 14px;
+    }
+
+    #dark-mode-btn{
+        margin-left: 5px;
+    }
+    
 }
