--- a/styles/Jobs/jobs__side-bar.css
+++ b/styles/Jobs/jobs__side-bar.css
@@ -21,6 +21,7 @@
     flex-direction: row;
     max-width: 100%;
     margin-bottom: 70px;
+    transition: background-color 0.3s, color 0.3s, box-shadow 0.3s;
 }
 
 /*Filters*/
