--- a/styles/Job-details/jobs-details__header.css
+++ b/styles/Job-details/jobs-details__header.css
@@ -128,6 +128,25 @@
     transition: background 0.3s;
 }
 
+#toggle {
+    display: none;
+}
+
+#dark-mode-btn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 20px;
+    font-size: 26px;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+}
+
+#dark-mode-btn.active {
+    color: #ffd700; /* Amarillo dorado */
+    transform: rotate(360deg);
+}
+
 .btn:hover {
     background: rgba(255, 255, 255, 0.2);
 }
